--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,10 +7,11 @@ site_url: 'http://dist-keras.joerihermans.com'
 # Page definitions.
 pages:
 - Home: index.md
+- Optimizers: optimizers.md
 - License: license.md
 
 # Documentation and theme configuration
-theme: material
+theme: readthedocs
 docs_dir: 'docs'
 markdown_extensions:
 - admonition
